--- a/client/public/index.html
+++ b/client/public/index.html
@@ -97,7 +97,7 @@
               <div class="h5 mb-1 font-weight-light">CONTACT INFORMATION</div>
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a class="text-white" href="mailto:MethylscapeWebAdmin@mail.nih.gov"> Contact Us </a>
+                  <a class="text-white" href="mailto:NCIMethylscapeWebAdmin@mail.nih.gov"> Contact Us </a>
                 </li>
               </ul>
             </div>
