--- a/client/public/index.html
+++ b/client/public/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="row">
             <div class="p-2 mb-4">
-              <a href="https://ccr.cancer.gov/" class="text-white h4 mb-1"> National Cancer Institude </a>
+              <a href="https://ccr.cancer.gov/" class="text-white h4 mb-1"> National Cancer Institute </a>
               <div class="h6">
                 at the
                 <a class="text-white" href="https://www.cancer.gov/"> National Institutes of Health </a>
