--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
 
       gtag("config", "G-SKN74LB5CM");
     </script>
+    <script src="https://cbiit.github.io/nci-softwaresolutions-elements/components/include-html.js"></script>
   </head>
   <body class="d-flex vh-100 flex-column" react-cloak style="overflow-x: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
