mobile responsive about page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,96 +22,96 @@
   <body class="d-flex vh-100 flex-column" react-cloak style="overflow-x: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <main id="root" class="d-flex flex-column flex-grow-0 align-items-stretch bg-primary"></main>
-    <footer class="flex-grow-0" style="border-top: 1px solid white">
-      <div class="bg-dark text-white py-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 mb-4">
-              <a href="https://ccr.cancer.gov/" target="_blank" rel="noopener noreferrer" class="text-light h5 mb-1">
-                Center for Cancer Research
+  </body>
+  <footer class="flex-grow-0" style="border-top: 1px solid white">
+    <div class="bg-dark text-white py-4">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-sm-auto mb-4">
+            <a href="https://ccr.cancer.gov/" target="_blank" rel="noopener noreferrer" class="text-light h5 mb-1">
+              Center for Cancer Research
+            </a>
+            <div class="h6">
+              at the
+              <a class="text-light" href="https://www.cancer.gov/" target="_blank" rel="noopener noreferrer">
+                National Cancer Institute
               </a>
-              <div class="h6">
-                at the
+            </div>
+          </div>
+          <div class="col-sm-auto mb-4">
+            <div class="h5 mb-1 fw-light">CONTACT INFORMATION</div>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a class="text-light" href="mailto:NCIMethylscapeWebAdmin@mail.nih.gov"> Contact Us </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-auto mb-4">
+            <div class="h5 mb-1 fw-light">POLICIES</div>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a
+                  class="text-light"
+                  href="https://www.cancer.gov/policies/accessibility"
+                  target="_blank"
+                  rel="noopener noreferrer">
+                  Accessibility
+                </a>
+              </li>
+              <li>
+                <a
+                  class="text-light"
+                  href="https://www.cancer.gov/policies/disclaimer"
+                  target="_blank"
+                  rel="noopener noreferrer">
+                  Disclaimer
+                </a>
+              </li>
+              <li>
+                <a
+                  class="text-light"
+                  href="https://www.cancer.gov/policies/foia"
+                  target="_blank"
+                  rel="noopener noreferrer">
+                  FOIA
+                </a>
+              </li>
+              <li>
+                <a
+                  class="text-light"
+                  target="_blank"
+                  href="https://www.hhs.gov/vulnerability-disclosure-policy/index.html">
+                  HHS Vulnerability Disclosure
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-auto mb-4">
+            <div class="h5 mb-1 fw-light">MORE INFORMATION</div>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a class="text-light" href="http://www.hhs.gov/" target="_blank" rel="noopener noreferrer">
+                  U.S. Department of Health and Human Services
+                </a>
+              </li>
+              <li>
+                <a class="text-light" href="http://www.nih.gov/" target="_blank" rel="noopener noreferrer">
+                  National Institutes of Health
+                </a>
+              </li>
+              <li>
                 <a class="text-light" href="https://www.cancer.gov/" target="_blank" rel="noopener noreferrer">
                   National Cancer Institute
                 </a>
-              </div>
-            </div>
-            <div class="col-lg-3 mb-4">
-              <div class="h5 mb-1 fw-light">CONTACT INFORMATION</div>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a class="text-light" href="mailto:NCIMethylscapeWebAdmin@mail.nih.gov"> Contact Us </a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-3 mb-4">
-              <div class="h5 mb-1 fw-light">POLICIES</div>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a
-                    class="text-light"
-                    href="https://www.cancer.gov/policies/accessibility"
-                    target="_blank"
-                    rel="noopener noreferrer">
-                    Accessibility
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="text-light"
-                    href="https://www.cancer.gov/policies/disclaimer"
-                    target="_blank"
-                    rel="noopener noreferrer">
-                    Disclaimer
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="text-light"
-                    href="https://www.cancer.gov/policies/foia"
-                    target="_blank"
-                    rel="noopener noreferrer">
-                    FOIA
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="text-light"
-                    target="_blank"
-                    href="https://www.hhs.gov/vulnerability-disclosure-policy/index.html">
-                    HHS Vulnerability Disclosure
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-3 mb-4">
-              <div class="h5 mb-1 fw-light">MORE INFORMATION</div>
-              <ul class="list-unstyled mb-0">
-                <li>
-                  <a class="text-light" href="http://www.hhs.gov/" target="_blank" rel="noopener noreferrer">
-                    U.S. Department of Health and Human Services
-                  </a>
-                </li>
-                <li>
-                  <a class="text-light" href="http://www.nih.gov/" target="_blank" rel="noopener noreferrer">
-                    National Institutes of Health
-                  </a>
-                </li>
-                <li>
-                  <a class="text-light" href="https://www.cancer.gov/" target="_blank" rel="noopener noreferrer">
-                    National Cancer Institute
-                  </a>
-                </li>
-                <li>
-                  <a class="text-light" href="http://usa.gov/" target="_blank" rel="noopener noreferrer"> USA.gov </a>
-                </li>
-              </ul>
-            </div>
+              </li>
+              <li>
+                <a class="text-light" href="http://usa.gov/" target="_blank" rel="noopener noreferrer"> USA.gov </a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="text-center">NIH ... Turning Discovery Into Health ®</div>
       </div>
-    </footer>
-  </body>
+      <div class="text-center">NIH ... Turning Discovery Into Health ®</div>
+    </div>
+  </footer>
 </html>
