--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,8 +26,8 @@
   <footer class="flex-grow-0" style="border-top: 1px solid white">
     <div class="bg-dark text-white py-4">
       <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-sm-auto mb-4">
+        <div class="row">
+          <div class="col-lg-auto mb-4">
             <a href="https://ccr.cancer.gov/" target="_blank" rel="noopener noreferrer" class="text-light h5 mb-1">
               Center for Cancer Research
             </a>
@@ -38,7 +38,9 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-auto mb-4">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-lg-auto mb-4">
             <div class="h5 mb-1 fw-light">CONTACT INFORMATION</div>
             <ul class="list-unstyled mb-0">
               <li>
@@ -46,7 +48,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-sm-auto mb-4">
+          <div class="col-lg-auto mb-4">
             <div class="h5 mb-1 fw-light">POLICIES</div>
             <ul class="list-unstyled mb-0">
               <li>
@@ -86,7 +88,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-sm-auto mb-4">
+          <div class="col-lg-auto mb-4">
             <div class="h5 mb-1 fw-light">MORE INFORMATION</div>
             <ul class="list-unstyled mb-0">
               <li>
