--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,9 +19,12 @@
     </script>
     <script src="https://cbiit.github.io/nci-softwaresolutions-elements/components/include-html.js"></script>
   </head>
-  <body class="d-flex vh-100 flex-column" react-cloak style="overflow-x: hidden">
+  <body class="d-block vh-100 flex-column" react-cloak style="overflow-x: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <main id="root" class="d-flex flex-column flex-grow-0 align-items-stretch bg-primary"></main>
+    <main
+      id="root"
+      class="d-flex flex-column flex-grow-0 align-items-stretch bg-primary"
+      style="min-height: 1100px"></main>
   </body>
   <footer class="flex-grow-0" style="border-top: 1px solid white">
     <div class="bg-dark text-white py-4">
